src/objects/WaiveTerminationObligationOption__mdt.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>waiveTerminationObligation__c</fullName>
        <label>waiveTerminationObligation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Waive Termination Obligation Option</label>
    <pluralLabel>Waive Termination Obligation Options</pluralLabel>
</CustomObject>